WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192939
Fix a typo in slow_path_construct_arityCheck and operationConstructArityCheck.
https://bugs.webkit.org/show_bug.cgi?id=192939
Summary
Fix a typo in slow_path_construct_arityCheck and operationConstructArityCheck.
Mark Lam
Reported
2018-12-20 10:32:52 PST
<
rdar://problem/46869516
>
Attachments
proposed patch.
(3.75 KB, patch)
2018-12-20 10:40 PST
,
Mark Lam
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-12-20 10:40:58 PST
Created
attachment 357831
[details]
proposed patch.
Keith Miller
Comment 2
2018-12-20 10:48:39 PST
Comment on
attachment 357831
[details]
proposed patch. r=me.
Mark Lam
Comment 3
2018-12-20 10:52:27 PST
Thanks for the review. Landed in
r239455
: <
http://trac.webkit.org/r239455
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug